# wfl

./: .build_meta.json  .gitignore  .wflcfg  AGENTS.md  AI_POLICY.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREDITS.md  Cargo.toml  DOCUMENTATION_COMPLETE.md  GOVERNANCE.md  README.md  SECURITY.md  TODO.md  binary_test  binary_test.rs  blog_server.wfl  blog_server.wfl.ast.txt  blog_server.wfl.lex.txt  blog_server_minimal.wfl  bug.md  bug1.md  build.rs  byte_vec_test  byte_vec_test.rs  claude.yml  clippy_output.txt  combine_files.wfl  compare_search_full_clean  concurrent_1.txt  concurrent_2.txt  concurrent_3.txt  conflicts.txt  context7.json  debug_lookahead.txt  debug_output.txt  debug_pattern.wfl  debug_pattern.wfl.lex.txt  (+115 more)
.cargo/: config.toml
.claude/: settings.json  settings.local.json
.jules/: bolt.md
Dev diary/: 2025-06-27-command-line-arguments.md  2025-08-05_backreference_implementation.md  2025-08-05_lookaround_implementation.md  2025-08-05_lookbehind_implementation.md  2025-08-05_phase3_completion.md  2025-08-05_unicode_phase3_complete.md  2025-08-12-fix-bracket-array-indexing.md  2025-09-20-secure-random-implementation.md  2026-06-12-database-bindings-and-route-parameters.md  2026-07-03-http-client-and-standard-crypto-issue-558.md  2026-07-03-include-type-inference-issue-553.md  2026-07-03-testprograms-triage-and-fixes.md  2026-07-04-https-tls-web-server.md  2026-07-04-natural-language-precedence-finally-between-error-binding.md  2026-07-06-github-issues-batch-583-582-566-557-567.md  2026-07-07-uniform-elm-error-system.md  2026-07-08-websockets-issue-555.md  2026-07-08-wflpkg-frozen-data-literal-grammar.md  2026-07-09-auth-session-crypto-primitives.md  2026-07-09-password-hashing-argon2-bcrypt-scrypt-pbkdf2.md  2026-07-10-image-resize-and-ttl-cache.md  2026-07-10-issue-560-residuals-try-returns-container-methods.md  2026-07-10-test-mode-failure-accounting.md  2026-07-10-web-server-bind-address-issue-466.md  2026-07-10-web-server-gaps-issue-597.md  2026-07-10-wflhash-experimental-dual-hash-docs.md  2026-07-11-nothing-reassign-widen-issue-605.md  2026-07-11-phase-0-concurrency-hardening.md  2026-07-11-subprocess-policy-enforcement.md  2026-07-11-wfl-version-constant-issue-602.md  2026-07-12-shared-execution-budget.md  2026-07-13-cargo-crate-updates.md  2026-07-13-issue-610-phase-1-containment.md  2026-07-13-issue-610-phase-1-inventory.md  2026-07-13-issue-610-phase-1-scorecard-baseline.md  2026-07-14-repl-errors-warnings-and-variable-storage.md  2026-07-16-cycle-safe-values.md  2026-07-18-display-multiple-values.md  2026-07-18-issue-592-bare-zero-arg-include.md  2026-07-20-action-overloading.md  (+13 more)
Docs/: CLEANUP-PROJECT-SUMMARY.md  Gemini Reserch.md  README.md  TODO-SUMMARY.md  TODO.md  TOOLS.md  VALIDATION-NOTES.md  WFL-AI-Reference.md  ai-coding-guide.md  implementation_progress_2025-08-04.md  implementation_progress_2025-08-05.md  implementation_progress_2025-08-06.md  index.md  lexar_fix_1.md  newpatterm.md  parser-cursor-architecture.md  pattern-guide.md  rust_loc_report.md  stdlib_implementation.md  wfl-args.md  wfl-documentation-index.md  wfl-foundation.md  wfl-living-ai.md  wfl-new-pattern-system.md  wfl-pattern-guide.md  wfl-patterns.md  wfl-regex.md  wfl-stdlib.md  wfl-unicode-patterns.md  wfl_parser_limitations.md  wfl_rust_loc_report.md  wflhash.md
LabsTest/: email.wfl
Nexus/: nexus.wfl  nexus_partial.wfl  simple_count_test.wfl  test_action_syntax.wfl  test_concat.wfl  test_even_check.wfl  test_factorial.wfl  test_factorial_inline.wfl  test_factorial_parens.wfl  test_fragment.wfl  test_inline_even.wfl  test_minimal.wfl  test_nested_loops.wfl  test_section2.wfl  test_sections_1_3.wfl  test_simple_call.wfl  test_skip_loop.wfl  test_with_check.wfl  test_zero_concat.wfl
TestPrograms/: .wflcfg  a.wfl  action_overloading_comprehensive.wfl  args_comprehensive.wfl  args_comprehensive.wfl.lex.txt  args_example.wfl  args_example_debug.txt  args_simple.wfl  args_test.wfl  args_test_debug.txt  args_test_minimal.wfl  args_test_minimal_debug.txt  arity_bug_test.wfl  arity_bug_trigger.wfl  arity_success_test.wfl  b.wfl  basic_syntax_comprehensive.wfl  basic_syntax_comprehensive.wfl.ast.txt  basic_syntax_comprehensive_debug.txt  basic_test.wfl  binary_file_and_mime_test.wfl  circular_a.wfl  (+258 more)
crates/wflpkg/: Cargo.toml
crates/wflpkg/src/: archive.rs  checksum.rs  error.rs  lib.rs  main.rs  package_files.rs  permissions.rs
crates/wflpkg/src/cache/: mod.rs
crates/wflpkg/src/commands/: add.rs  build.rs  check.rs  create.rs  info.rs  login.rs  mod.rs  remove.rs  run.rs  search.rs  share.rs  tooling.rs  update.rs
crates/wflpkg/src/datalit/: bytegate.rs  error.rs  fmt.rs  hash.rs  identity.rs  json.rs  limits.rs  mod.rs  parser.rs  tests.rs  version.rs
crates/wflpkg/src/lockfile/: mod.rs  parser.rs  writer.rs
crates/wflpkg/src/manifest/: mod.rs  parser.rs  schema.rs  version.rs  writer.rs
crates/wflpkg/src/registry/: advisory.rs  api.rs  auth.rs  mod.rs
crates/wflpkg/src/resolver/: algorithm.rs  mod.rs  package_path.rs
crates/wflpkg/src/workspace/: mod.rs  parser.rs
crates/wflpkg/tests/: error_handling.rs  security_tests.rs  version_and_lockfile_tests.rs  workflow_integration.rs
fuzz/: .gitignore  Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_frontend.rs  fuzz_lexer.rs  fuzz_module_loading.rs  fuzz_parser.rs  fuzz_pattern.rs
fuzz/seeds/fuzz_frontend/: seed_include.wfl  seed_loadmod.wfl
fuzz/seeds/fuzz_lexer/: seed_check.wfl  seed_store.wfl
fuzz/seeds/fuzz_parser/: seed_action.wfl  seed_count.wfl
fuzz/seeds/fuzz_pattern/: seed_digits.txt  seed_mixed.txt  seed_word.txt
wfl-lsp/: Cargo.toml  MCP_TEST_REPORT.md  README.md
wfl-lsp/examples/: README.md  simple_mcp_client.rs  test_mcp_server.ps1  test_mcp_server.sh
wfl-lsp/src/: core.rs  lib.rs  main.rs  mcp_server.rs
wfl-lsp/tests/: lsp_completion_functionality_test.rs  lsp_completion_test.rs  lsp_diagnostics_test.rs  lsp_end_to_end_test.rs  lsp_end_to_end_validation_test.rs  lsp_hover_test.rs  lsp_performance_stability_test.rs  lsp_server_test.rs  lsp_version_test.rs
(+756 files in other folders)
