[package]
name = "wfl"
version = "26.1.6"
edition = "2024"
description = "WFL (WebFirst Language) is a programming language designed to be readable and intuitive using natural language constructs."
license = "Apache-2.0"
authors = ["Logbie LLC <info@logbie.com>"]
default-run = "wfl"

[package.metadata.bundle]
name = "WFL"
identifier = "com.logbie.wfl"
icon = ["icons/wfl.png"]
version = "26.1.6"
copyright = "© 2025 Logbie LLC"
category = "Developer Tool"
short_description = "WebFirst Language Compiler and Runtime"
long_description = "WFL (WebFirst Language) is a programming language designed to be readable and intuitive using natural language constructs."
executable = "wfl"

[workspace]
members = [
    ".",
    "wfl-lsp"
]

[package.metadata.deb]
assets = [
    ["target/release/wfl", "usr/bin/", "755"],
    ["target/release/package/.wflcfg", "etc/wfl/wfl.cfg", "644"]
]
extended-description = """
WFL (WebFirst Language) is a programming language designed to be readable and intuitive
using natural language constructs. This package includes the WFL compiler and runtime.
"""
section = "devel"
priority = "optional"
maintainer-scripts = "debian/"
conf-files = ["/etc/wfl/wfl.cfg"]

[dependencies]
logos = "0.15.0"
rand = "0.9.1"
regex = "1.10.3"
log = "0.4.20"
rustyline = "12.0.0"
tokio = { version = "1.35.1", features = ["full"] }
reqwest = { version = "0.11.24", features = ["json"] }
sqlx = { version = "0.8.1", features = ["runtime-tokio-rustls", "sqlite", "mysql", "postgres"] }
serde_json = "1.0.114"
warp = "0.3.7"
uuid = { version = "1.6.1", features = ["v4"] }
bytes = "1.5.0"
codespan-reporting = "0.11.1"
simplelog = "0.12.1"
chrono = "0.4.31"
once_cell = "1.18.0"
time = { version = "0.3", features = ["formatting", "macros"] }
dhat = { version = "0.3.0", optional = true }
glob = "0.3.2"
# Cryptographic and security dependencies
zeroize = { version = "1.7", features = ["derive"] }
subtle = "2.5"
sha2 = "0.10"
hkdf = "0.12"
# Force newer version to fix future incompatibility warning
num-bigint-dig = "0.8.6"

[features]
dhat-heap = ["dhat"]    # if you are doing heap profiling
dhat-ad-hoc = ["dhat"]  # if you are doing ad hoc profiling

[dev-dependencies]
tempfile = "3.19.1"
libc = "0.2.152"
criterion = "0.4"

[[bench]]
name = "parser_bench"
harness = false

[profile.release]
debug = true
