[package]
name = "wfl-lsp"
version = "26.1.10"
edition = "2024"
description = "Language Server Protocol implementation for the WebFirst Language (WFL)"
license = "MIT"

[dependencies]
wfl = { path = ".." }
tower-lsp = "0.20.0"
tokio = { version = "1.35.1", features = ["full"] }
dashmap = "5.5.3"
serde_json = "1.0.114"
env_logger = "0.10.1"

# MCP support - manual JSON-RPC 2.0 implementation
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tokio-test = "0.4.3"

[[bin]]
name = "wfl-lsp"
path = "src/main.rs"
