[package]
name = "wflpkg"
version = "0.1.0"
edition = "2024"
description = "Package manager for the WebFirst Language (WFL)"
license = "Apache-2.0"

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
reqwest = { version = "0.11.24", features = ["json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.114"
rustyline = "12.0.0"
rpassword = "5.0"
chrono = "0.4.31"
sha2 = "0.10"
zeroize = "1.7"
flate2 = "1.0"
tar = "0.4"

[dev-dependencies]
tempfile = "3.19.1"

[[bin]]
name = "wflpkg"
path = "src/main.rs"
