[package]
name = "wflpkg"
version = "0.1.0"
edition = "2024"
description = "Package manager for the WebFirst Language (WFL)"
license = "Apache-2.0"

[dependencies]
tokio = { version = "1.52.3", features = ["full"] }
reqwest = { version = "0.13.4", features = ["json", "multipart", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.150"
rustyline = "18.0.1"
rpassword = "7.5.4"
chrono = "0.4.45"
sha2 = "0.10"
zeroize = "1.9"
flate2 = "1.0"
tar = "0.4"
ignore = "0.4.23"
tempfile = "3.27.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[[bin]]
name = "wflpkg"
path = "src/main.rs"
